
		CHANGES in `multcomp' VERSION 0.993-3

    o    improve print method for confidence intervals

    o    new adjustment method `free' (for free combinations)


		CHANGES in `multcomp' VERSION 0.993-2

    o    make sure names are printed correctly when nrow(K) = 1

    o    interaction terms are now correctly handled when a symbolic
         descripton of the hypotheses is supplied, thanks to 
         Antonio Fabio Di Narzo for spotting.


		CHANGES in `multcomp' VERSION 0.993-1

    o    new vignette `Simultaneous Inference in General Parametric Models'

    o    warn if ... arguments are ignored

    o    levels in trees513 data slightly changed.


		CHANGES in `multcomp' VERSION 0.992-9

    o    remove deprecated functions simint and simtest (the files
         are still available from multcomp/inst/deprecated)

    o    better error message when factors specified in mcp() aren't
         found in model


		CHANGES in `multcomp' VERSION 0.992-8

    o    add model.frame and model.matrix methods for class `lme'
         (feature request by Antonio Rausell <arausell@cnio.es>)

    o    new data set `trees513'


		CHANGES in `multcomp' VERSION 0.992-7

    o    new contrasts `UmbrellaWilliams' and `GrandMean'
         (thanks to Daniel Gerhard <gerhard@biostat.uni-hannover.de>)


		CHANGES in `multcomp' VERSION 0.992-6

    o    add support for lme4::(g)lmer2 objects (thanks to Manuel Eugster)

    o    coef. and vcov. didn't always pass through, spotted by
         John Deke <jdeke73@gmail.com>


		CHANGES in `multcomp' VERSION 0.992-5

    o    remove non_function entries in Rd files


		CHANGES in `multcomp' VERSION 0.992-4

    o    update to mvtnorm 0.8-0


		CHANGES in `multcomp' VERSION 0.992-3

    o    better support for `mer', `lmer' and `glmer' objects
         (package `lme4')


		CHANGES in `multcomp' VERSION 0.992-2

    o    add support for `lme' objects (feature request by
         John Wilkinson <jnwilks@btinternet.com> and Dieter Menne