@@ -1,6 +1,6 @@
 
 export(glht, contrMat, univariate, adjusted, Ftest, Chisqtest, mcp, modelparm,
-       adjusted_calpha, univariate_calpha)
+       adjusted_calpha, univariate_calpha, parm)
 
 S3method(summary, glht)
 S3method(confint, glht)
@@ -18,3 +18,5 @@ S3method(glht, character)
 S3method(glht, expression)
 S3method(glht, mcp)
 S3method(glht, means)
+S3method(coef, parm)
+S3method(vcov, parm)
